# ai-cli-ollama

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
ai_cli/: _init_.py  cli.py  ollama_client.py
tests/: test_cli.py
