[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli-ollama"
version = "0.1.0"
description = "A Python-based CLI for interacting with local Ollama models (list & run)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [ { name = "Derick Fonka" } ]
dependencies = [
  "click>=8.1.3",
  "requests>=2.31.0"
]

[project.scripts]
ai-cli = "ai_cli.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
